Add article about v3 release

--- a/layouts/section/beta.html
+++ b/layouts/section/beta.html
@@ -59,10 +59,10 @@
         </h1>
 
         <h3>
-            <strong>Padloc is almost ready for prime time</strong> but there are still some rough
-            edges that need smoothing out. Can't wait? Apply as a beta tester and
-            get access right away! Or you an just leave your email here
-            and we'll let you know when it's ready.
+            <strong>Padloc 3 is almost ready for prime time</strong> but there
+            are still some rough edges that need smoothing out. Can't wait?
+            Apply as a beta tester and get access right away! Or you an just
+            leave your email here and we'll let you know when it's ready.
         </h3>
     </div>
 </section>
