--- a/layouts/section/business.html
+++ b/layouts/section/business.html
@@ -48,7 +48,7 @@
             <strong>Padloc is the perfect password manager for your business</strong>
             whether you're a small team, large company or any other kind of organization!
             Easily share passwords, documents and more while being in full control
-            over who can see, access and edit your data!
+            over who can see, edit and manage your data!
         </h3>
     </div>
 </section>
