Update beta signup form; Remove mixpanel tracking

--- a/layouts/section/beta.html
+++ b/layouts/section/beta.html
@@ -71,18 +71,20 @@
     <div class="inner">
         <form action="https://padlock.us3.list-manage.com/subscribe/post?u=156fa42cf0f141436c20b06b2&amp;id=58a9450e8b" method="post">
             <div class="field email">
-                <label><strong>Enter Your Email</strong> (no spam, pinky promise!)</label>
+                <label><strong>Enter Your Email</strong></label>
                 <input type="email" value="" name="EMAIL" placeholder="Email Address" required/>
             </div>
 
-            <div class="field radio">
-                <label for="radio1">I want to be a beta tester! 👷</label>
-                <input type="radio" required value="1" name="group[27913][1]" id="radio1" required/>
+            <div class="field">
+                <input type="checkbox" value="1" name="group[28033][2]" id="check1" />
+
+                <label for="check1">I want to be a beta tester! 👷</label>
             </div>
 
-            <div class="field radio">
+            <div class="field">
+                <input type="checkbox" value="1" name="group[28033][1]" id="radio2" />
+
                 <label for="radio2">Just let me know when it's ready.</label>
-                <input type="radio" required value="0" name="group[27913][1]" id="radio2" required/>
             </div>
 
             <input type="hidden" name="b_156fa42cf0f141436c20b06b2_58a9450e8b" tabindex="-1" value="" />
