Fix broken illustration url

--- a/layouts/section/business.html
+++ b/layouts/section/business.html
@@ -37,7 +37,7 @@
     {{ partial "header" . }}
 
     <div class="inner">
-        <img src="/img/illustrations/team2.svg" class="wide">
+        <img src="/img/illustrations/team.svg" class="wide">
 
         <h1>
             {{ partial "logo.svg" . }}
