--- a/layouts/section/beta.html
+++ b/layouts/section/beta.html
@@ -2,9 +2,13 @@
 
 <style>
     section.hero img {
-        width: 230px;
+        width: 240px;
         float: right;
-        margin-top: 100px;
+    }
+
+    section.hero h4 {
+        font-weight: 400;
+        max-width: 410px;
     }
 
     form {
@@ -58,12 +62,12 @@
             <span>Beta</span>
         </h1>
 
-        <h3>
+        <h4>
             <strong>Padloc 3 is almost ready for prime time</strong> but there
             are still some rough edges that need smoothing out. Can't wait?
             Apply as a beta tester and get access right away! Or you an just
             leave your email here and we'll let you know when it's ready.
-        </h3>
+        </h4>
     </div>
 </section>
 
