--- a/static/css/downloads.css
+++ b/static/css/downloads.css
@@ -8,22 +8,28 @@ ul.downloads-list {
 }
 
 ul.downloads-list li {
-    /* margin: 1em 0; */
+  /* margin: 1em 0; */
 }
 
 ul.downloads-list li a {
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-    border: solid 1px rgba(0, 0, 0, 0.1);
-    padding: 1em;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+  border: solid 1px rgba(0, 0, 0, 0.1);
+  padding: 1em;
+  color: #444;
 }
 
 ul.downloads-list .icon {
-    font-size: 2em;
-    margin-right: 0.5em;
+  font-size: 2em;
+  margin-right: 0.5em;
 }
 
 .download-title {
-    font-size: 1.2em;
+  font-size: 1.2em;
+  color: #23b4ff;
+}
+
+.download-version {
+  opacity: 0.8;
 }
