--- a/layouts/section/business.html
+++ b/layouts/section/business.html
@@ -57,7 +57,7 @@
     <div class="inner">
         <p>
             Are you an educational institution or non-profit organization?
-            <a href="sales@padloc.app">Ask us about our special discounts!</a>
+            <a href="mailto:sales@padloc.app">Ask us about our special discounts!</a>
         </p>
 
         <div class="plans-list">
