Add guid on migrating data to Padloc 3 from older versions; archive older guides

--- a/layouts/section/downloads.html
+++ b/layouts/section/downloads.html
@@ -60,7 +60,7 @@
     </div>
 </section>
 
-<section class="downloads">
+<section class="downloads" id="legacy">
     <div class="inner">
         <h2>Padlock v2.7</h2>
 
