--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -5,7 +5,7 @@
             <li><a href="/blog/">Blog</a></li>
             <li><a href="/guides/">Guides</a></li>
             <li><a href="/downloads/">Downloads</a></li>
-            <li><a href="mailto:contact@pacloc.app">Contact</a></li>
+            <li><a href="mailto:contact@padloc.app">Contact</a></li>
             <li><a href="/privacy/">Privacy</a></li>
             <li><a href="{{ .Param "github_url" }}" class="padlock-github">Source</a></li>
         </ul>
