--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -17,9 +17,8 @@
           <a href="{{ .Param "login_url" }}" class="">Login</a>
       </li>
       <li>
-        <a href="{{ .Param "get_started_url" }}" class="signup-button btn">
-          <span>Try For Free</span>
-          <span class="icon icon-play-circle"></span>
+        <a href="{{ .Param "get_started_url" }}" class="btn">
+          <span>Sign Up</span>
         </a>
       </li>
     </ul>
